--- a/issues.html
+++ b/issues.html
@@ -22,7 +22,7 @@ text {
         </style>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.1.6/d3.min.js"></script>
 <script type='text/javascript' src='jquery.tipsy.js'></script>
 <link rel="stylesheet" href="tipsy.css" type="text/css" />
 
@@ -46,7 +46,7 @@ var svg = d3.select("#svg").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-var y = d3.scale.linear()
+var y = d3.scale.pow().exponent(.5)
   .range([height, 0]);
 
 var x = d3.time.scale()
@@ -91,7 +91,7 @@ d3.json("issues.json", function(data) {
   
   x.domain(d3.extent(all_entries, function(d){return d.dt;})).nice();
   // x.domain([new Date(1333238400 * 1000), new Date()]).nice();
-  y.domain([0, d3.max(issueData, function(d){return d3.max(d.value, function(dd){return dd.count});})])
+  y.domain([0, d3.max(issueData, function(d){return d3.max(d.value, function(dd){return dd.count});})]).nice()
 
   svg.append("g")
       .attr("class", "x axis")
